# euricio-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  desktop-release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/: ca.yml  de.yml  en.yml  es.yml  eu.yml
src-tauri/src/: deep_link.rs  i18n.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: auth.rs  calls.rs  contacts.rs  mod.rs  sync.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/sync/: engine.rs  mod.rs  outbox.rs  pull.rs  push.rs
src/components/: PhoneButton.tsx
src/components/calls/: CallPopup.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  SyncStatusBar.tsx
src/i18n/: index.ts
src/i18n/locales/: ca.json  de.json  en.json  es.json  eu.json
src/screens/: Calculadora.tsx  Calendar.tsx  Calls.tsx  Configuracion.tsx  ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  LeadDetail.tsx  Leads.tsx  Login.tsx  Pipeline.tsx  Properties.tsx  Settings.tsx  Tasks.tsx  TimeTracking.tsx
src/screens/personal/: Turnos.tsx  Vacaciones.tsx
src/screens/reports/: ReporteActividad.tsx  ReportePersonal.tsx  ReportePropiedades.tsx  ReporteSales.tsx
src/utils/: format.ts  phone.ts
