[package]
name = "euricio-desktop"
version = "0.1.0"
description = "Euricio CRM Desktop"
authors = ["Eric Zetzsche <ez@euricio.es>"]
license = ""
repository = "https://github.com/Euricio/euricio-desktop"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "euricio-desktop"
path = "src/main.rs"

[lib]
name = "euricio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
log = "0.4"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
